# capns

./: .gitignore  Cargo.toml  Cargo.toml.wstemplate  HANDOFF_TYPE_ELIMINATION.md  README-REGISTRY.md  README.md  TEST_CATALOG.md  catalog_tests.py  config.json  run_all_tests.sh  style.css  test.sh  test_json_format  test_json_format.rs  version.txt
.ws/: state.json
docs/: 00-OVERVIEW.md  02-PREDICATES.md  03-SPECIFICITY.md  04-CAP-URN-STRUCTURE.md  05-DISPATCH.md  06-RANKING.md  10-VALIDATION-RULES.md  11-MEDIA-URNS.md  12.2-FRAME-PROTOCOL.md  12.3-HANDSHAKE.md  13.1-CARTRIDGE-RUNTIME.md  14.1-HOST-RUNTIME.md  14.2-RELAY-SWITCH.md  14.3-RELAY-TOPOLOGY.md  15.4-PLANNER.md  16.1-CARTRIDGE-ANATOMY.md  A0-FORMAL-FOUNDATIONS.md  ARCHITECTURE.md  FORM_CARDINALITY_DESIGN.md  MATCHING.md  MEDIA_SPEC_SYSTEM.md  MEDIA_URN_CATALOG.md  PERFORMANCE.md  README-REGISTRY.md  RULES.md
examples/: debug_registry.rs  registry_usage.rs  test_registry_cap.rs  test_specific_cap.rs
macino/: Cargo.toml  README.md
macino/examples/: README.md  execute_dag.rs  multi-format.dot  parse_dot.rs  pdf-processing.dot  pdf-summary-pipeline.dot  text-processing.dot
macino/src/: executor.rs  lib.rs
macino/tests/: cartridge_scenarios.rs  testcartridge_integration.rs
src/: async_plugin_host.rs  caller.rs  cap.rs  cap_card.rs  cap_matrix.rs  cap_router.rs  cap_urn.rs  capability.rs  capability_id.rs  capability_id_builder.rs  capability_key.rs  capability_key_builder.rs  caphost_registry.rs  cbor_frame.rs  cbor_integration_tests.rs  cbor_io.rs  lib.rs  local_plugin_router.rs  manifest.rs  media_registry.rs  media_spec.rs  media_urn.rs  message.rs  packet.rs  plugin_host.rs  plugin_host_runtime.rs  plugin_relay.rs  plugin_repo.rs  plugin_repo_router.rs  plugin_runtime.rs  profile_schema_cache.rs  profile_schema_registry.rs  registry.rs  relay_switch.rs  response.rs  schema_validation.rs  standard.rs  validation.rs
src/cap/: mod.rs  (+6 more)
standard/: all-capabilities.json  all-media-specs.json  audio-path.json  audio-transcription-candle.json  batch-size.json  boolean-array-to-string.json  boolean-array.json  boolean-to-integer.json  boolean-to-number.json  boolean-to-object.json  boolean-to-string.json  boolean.json  cap_action_analyze_app_fgrnd_language_en_output_task_phase_annotation_pass_target_document_type_task_creation.json  cap_action_analyze_app_fgrnd_language_en_output_task_phase_close_read_target_document_type_task_creation.json  cap_action_analyze_app_fgrnd_language_en_output_task_phase_deep_dive_target_document_type_task_creation.json  cap_action_analyze_app_fgrnd_language_en_output_task_phase_first_glance_target_document_type_task_creation.json  cap_action_analyze_app_fgrnd_language_en_output_task_phase_skim_pass_target_document_type_task_creation.json  (+233 more)
(+441 files in other folders)
