[package]
name = "capns"
version = "0.1.0"
edition = "2021"
description = "Core cap URN and definition system for FGND plugins"
authors = ["FGND Team"]

[dependencies]
tagged-urn = { path = "../tagged-urn-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
sha2 = "0.10"
thiserror = "1.0"
include_dir = "0.7"
anyhow = "1.0"
jsonschema = "0.17"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"