[dependencies]
anyhow = "1.0"
dirs = "5.0"
include_dir = "0.7"
jsonschema = "0.17"
regex = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
urlencoding = "2.1"

[dependencies.reqwest]
features = ["json"]
version = "0.12"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tagged-urn]
version = "0.12.3794"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dev-dependencies]
tempfile = "3.10"

[package]
authors = ["FGND Team"]
description = "Core cap URN and definition system for FGND plugins"
edition = "2021"
license = "MIT"
name = "capns"
version = "0.112.33465"
