[dependencies]
anyhow = "1.0"
ciborium = "0.2"
crossbeam-channel = "0.5"
dirs = "5.0"
glob = "0.3"
include_dir = "0.7"
jsonschema = "0.17"
regex = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.reqwest]
features = ["json"]
version = "0.12"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tagged-urn]
path = "../tagged-urn-rs"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dev-dependencies]
tempfile = "3.10"

[package]
authors = ["https://github.com/jowharshamshiri"]
description = "Core cap URN and definition system for MACINA plugins"
edition = "2021"
license = "MIT"
name = "capns"
version = "0.127.36589"
