[package]
name = "macino"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/jowharshamshiri"]
description = "DOT parser with CapNS orchestration for DAG execution"
license = "MIT"

[dependencies]
dot-parser = "0.1"
thiserror = "1.0"
async-trait = "0.1"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.capns]
path = ".."

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.dirs]
version = "5.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }
tempfile = "3.0"
ciborium = "0.2"
